Iniciando a codificação da primeira seção.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     <title>LandingPage</title>
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <main id="main">
+      <section class="content">
+        <h3>
+          To these in the morning I sent the lead who was to enter the hole
+        </h3>
+        <p class="label">20 December</p>
+        <article>
+          This sounded nonsense to Alice, so she said nothing, but set off at
+          once toward the Red Queen. To her surprise, she lost sight of her in a
+          moment, and found herself walking in at the front-door again.
+        </article>
+        <article>
+          For some minutes Alice stood without speaking, looking out in all
+          directions over the country - and a most curious country it was.
+        </article>
+        <h5>Perfect for Your</h5>
+        <p>
+          The method is this: in an acre of ground you bury, at six inches
+          distance and eight deep, a quantity of acorns, dates, chestnuts, and
+          other mast or vegetables, whereof these animals are fondest then you
+          drive.
+        </p>
+        <div>
+          <img src="/assets/img/content/photoContent.png" alt="" />
+          <p>photo by Denis</p>
+        </div>
+        <p>
+          The tattered remains of a checked curtain were drawn round the bed's
+          head, to exclude the wind, which, however, made its way into the
+          comfortless room through the numerous chinks in the door.
+        </p>
+        <div>
+          <img src="/assets/img/content/photoContent01.png" alt="" />
+          <p>photo by Denis</p>
+        </div>
+        <p>
+          When the last 'natural' had been declared, and the profit and loss
+          account of fish and sixpences adjusted, to the satisfaction of all
+          parties, Mr. Bob Sawyer rang for supper, and the visitors squeezed.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
