Iniciando codificação seção 2 (sidebar + newsletter)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3>
           To these in the morning I sent the lead who was to enter the hole
         </h3>
-        <p class="label">20 December</p>
+        <p id="label">20 December</p>
         <article>
           This sounded nonsense to Alice, so she said nothing, but set off at
           once toward the Red Queen. To her surprise, she lost sight of her in a
@@ -37,7 +37,7 @@
           other mast or vegetables, whereof these animals are fondest then you
           drive.
         </p>
-        <div>
+        <div class="photo-content">
           <img src="/assets/img/content/photoContent.png" alt="" />
           <p>photo by Denis</p>
         </div>
@@ -46,7 +46,7 @@
           head, to exclude the wind, which, however, made its way into the
           comfortless room through the numerous chinks in the door.
         </p>
-        <div>
+        <div class="photo-content">
           <img src="/assets/img/content/photoContent01.png" alt="" />
           <p>photo by Denis</p>
         </div>
@@ -55,6 +55,54 @@
           account of fish and sixpences adjusted, to the satisfaction of all
           parties, Mr. Bob Sawyer rang for supper, and the visitors squeezed.
         </p>
+      </section>
+      <section class="last-seen">
+        <p id="label">Last Seen</p>
+        <div class="list">
+          <img src="/assets/img/sidebarLastSeen/photo01.png" alt="" />
+          <div>
+            <p>To these in the morning I sent the lead who was to...</p>
+            <p>19 December</p>
+          </div>
+        </div>
+        <div class="list">
+          <img src="/assets/img/sidebarLastSeen/photo02.png" alt="" />
+          <div>
+            <p>When the last 'natural' had been declared, and the profit...</p>
+            <p>13 December</p>
+          </div>
+        </div>
+        <div class="list">
+          <img src="/assets/img/sidebarLastSeen/photo03.png" alt="" />
+          <div>
+            <p>Sam's attention that, when this person dismounted…</p>
+            <p>21 December</p>
+          </div>
+        </div>
+        <div class="list">
+          <img src="/assets/img/sidebarLastSeen/photo04.png" alt="" />
+          <div>
+            <p>To these in the morning I sent the lead who was ...</p>
+            <p>10 December</p>
+          </div>
+        </div>
+        <div class="list">
+          <img src="/assets/img/sidebarLastSeen/photo05.png" alt="" />
+          <div>
+            <p>The tattered remains of a checked curtain were drawn round...</p>
+            <p>12 December</p>
+          </div>
+        </div>
+        <section class="newsletter">
+          <div>
+            <article>Newsletter</article>
+            <p>Get our news earlier, let’s get in touch.</p>
+            <fieldset>
+              <form action="">Your email</form>
+            </fieldset>
+            <button>Send</button>
+          </div>
+        </section>
       </section>
     </main>
   </body>
