--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main id="main">
-      <section class="content">
+      <section id="content">
         <h3>
           To these in the morning I sent the lead who was to enter the hole
         </h3>
@@ -56,49 +56,55 @@
           parties, Mr. Bob Sawyer rang for supper, and the visitors squeezed.
         </p>
       </section>
-      <section class="last-seen">
-        <p id="label">Last Seen</p>
-        <div class="list">
-          <img src="/assets/img/sidebarLastSeen/photo01.png" alt="" />
-          <div>
-            <p>To these in the morning I sent the lead who was to...</p>
-            <p>19 December</p>
+      <section id="sidebar">
+        <section class="last-seen">
+          <p id="label">Last Seen</p>
+          <div class="list">
+            <img src="/assets/img/sidebarLastSeen/photo01.png" alt="" />
+            <div>
+              <p>To these in the morning I sent the lead who was to...</p>
+              <p>19 December</p>
+            </div>
           </div>
-        </div>
-        <div class="list">
-          <img src="/assets/img/sidebarLastSeen/photo02.png" alt="" />
-          <div>
-            <p>When the last 'natural' had been declared, and the profit...</p>
-            <p>13 December</p>
+          <div class="list">
+            <img src="/assets/img/sidebarLastSeen/photo02.png" alt="" />
+            <div>
+              <p>
+                When the last 'natural' had been declared, and the profit...
+              </p>
+              <p>13 December</p>
+            </div>
           </div>
-        </div>
-        <div class="list">
-          <img src="/assets/img/sidebarLastSeen/photo03.png" alt="" />
-          <div>
-            <p>Sam's attention that, when this person dismounted…</p>
-            <p>21 December</p>
+          <div class="list">
+            <img src="/assets/img/sidebarLastSeen/photo03.png" alt="" />
+            <div>
+              <p>Sam's attention that, when this person dismounted…</p>
+              <p>21 December</p>
+            </div>
           </div>
-        </div>
-        <div class="list">
-          <img src="/assets/img/sidebarLastSeen/photo04.png" alt="" />
-          <div>
-            <p>To these in the morning I sent the lead who was ...</p>
-            <p>10 December</p>
+          <div class="list">
+            <img src="/assets/img/sidebarLastSeen/photo04.png" alt="" />
+            <div>
+              <p>To these in the morning I sent the lead who was ...</p>
+              <p>10 December</p>
+            </div>
           </div>
-        </div>
-        <div class="list">
-          <img src="/assets/img/sidebarLastSeen/photo05.png" alt="" />
-          <div>
-            <p>The tattered remains of a checked curtain were drawn round...</p>
-            <p>12 December</p>
+          <div class="list">
+            <img src="/assets/img/sidebarLastSeen/photo05.png" alt="" />
+            <div>
+              <p>
+                The tattered remains of a checked curtain were drawn round...
+              </p>
+              <p>12 December</p>
+            </div>
           </div>
-        </div>
+        </section>
         <section class="newsletter">
-          <div>
-            <article>Newsletter</article>
-            <p>Get our news earlier, let’s get in touch.</p>
+          <article>Newsletter</article>
+          <p>Get our news earlier, let’s get in touch.</p>
+          <div class="content-form">
             <fieldset>
-              <form action="">Your email</form>
+              <form>Your email</form>
             </fieldset>
             <button>Send</button>
           </div>
