Estrutura newsletter finalizada.

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         </section>
         <section class="newsletter">
           <article>Newsletter</article>
-          <p>Get our news earlier, let’s get in touch.</p>
           <div class="content-form">
-            <fieldset>
-              <form>Your email</form>
-            </fieldset>
-            <button>Send</button>
+            <form action="">
+              <legend>Get our news earlier, let’s get in touch.</legend>
+              <input type="email" id="email" placeholder="Your email" />
+              <input id="button" type="submit" value="Send" />
+            </form>
           </div>
         </section>
       </section>
