Estrutura sidebar finalizada, iniciando CSS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           parties, Mr. Bob Sawyer rang for supper, and the visitors squeezed.
         </p>
       </section>
-      <section id="sidebar">
+      <sidebar>
         <section class="last-seen">
           <p id="label">Last Seen</p>
           <div class="list">
@@ -109,7 +109,49 @@
             </form>
           </div>
         </section>
-      </section>
+        <section class="most-popular">
+          <p id="label">Most Popular</p>
+          <div class="list">
+            <img src="/assets/img/sidebarMostPopular/Photo01.png " alt="" />
+            <div>
+              <p>
+                However, I travelled along the shore of the sea towards the…
+              </p>
+              <p>14 December</p>
+            </div>
+          </div>
+          <div class="list">
+            <img src="/assets/img/sidebarMostPopular/Photo02.png" alt="" />
+            <div>
+              <p>Sam's attention that, when this person dismounted…</p>
+              <p>21 December</p>
+            </div>
+          </div>
+          <div class="list">
+            <img src="/assets/img/sidebarMostPopular/Photo03.png" alt="" />
+            <div>
+              <p>As we passed, I remarked a beautiful church-spire rising…</p>
+              <p>18 December</p>
+            </div>
+          </div>
+          <div class="list">
+            <img src="/assets/img/sidebarMostPopular/Photo04.png" alt="" />
+            <div>
+              <p>Lady Crawley, and mother of the young ladies. she was…</p>
+              <p>18 December</p>
+            </div>
+          </div>
+          <div class="list">
+            <img src="/assets/img/sidebarMostPopular/Photo05.png" alt="" />
+            <div>
+              <p>This I have produced as a scantling of Jack’s great...</p>
+              <p>15 December</p>
+            </div>
+          </div>
+
+          <button>Load More</button>
+        </section>
+      </sidebar>
     </main>
   </body>
 </html>
