--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+<!-- lang en? se teu site for em Ingles pode deixar. Lang sempre pt-br pois teu site é em portugues -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LandingPage</title>
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- SEMPRE importa o que é externo antes do teu conteudo, nunca depois, tem que arrumar isso. Senão pode ocorrer do teu css procurar algo que ainda não foi carregado -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,8 +18,11 @@
     />
   </head>
   <body>
+    <!-- O layout em si ficou muito bom, tudo exatamente como está no figma. -->
     <main id="main">
       <section id="content">
+        <!-- Aqui tu poderia ter uma div para ser o cabeçalho da noticia, apenas para separação mais clara do que é o que -->
+        <!-- Aqui é o titulo principal da pagina, então um h1 iria bem, tem que ter 1 h1 por pagina, não pode faltar isso. -->
         <h3>
           To these in the morning I sent the lead who was to enter the hole
         </h3>
@@ -30,6 +36,8 @@
           For some minutes Alice stood without speaking, looking out in all
           directions over the country - and a most curious country it was.
         </article>
+        <!-- Fechando Aqui -->
+        <!-- Aqui tu poderia ter uma div para ser o conteúdo da noticia, apenas para separação mais clara do que é o que -->
         <h5>Perfect for Your</h5>
         <p>
           The method is this: in an acre of ground you bury, at six inches
@@ -38,7 +46,9 @@
           drive.
         </p>
         <div class="photo-content">
-          <img src="/assets/img/content/photoContent.png" alt="" />
+          <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+          <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+          <img src="assets/img/content/photoContent.png" alt="" />
           <p>photo by Denis</p>
         </div>
         <p>
@@ -47,7 +57,9 @@
           comfortless room through the numerous chinks in the door.
         </p>
         <div class="photo-content">
-          <img src="/assets/img/content/photoContent01.png" alt="" />
+          <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+          <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+          <img src="assets/img/content/photoContent01.png" alt="" />
           <p>photo by Denis</p>
         </div>
         <p>
@@ -55,19 +67,29 @@
           account of fish and sixpences adjusted, to the satisfaction of all
           parties, Mr. Bob Sawyer rang for supper, and the visitors squeezed.
         </p>
+        <!-- Fechando Aqui -->
       </section>
       <sidebar>
+        <!-- Isso poderia ser um ID, pois é uma seção ÚNICA.  -->
         <section class="last-seen">
+          <!-- isso está errado, não se repete ID, ela é única e tu está usando duas vezes, nesse caso se usa classe. -->
           <p id="label">Last Seen</p>
+          <!-- Aqui, da para ser assim, mas está estranho, ideal é ter uma list (ul) chamada list por exemplo e dentro dela cada um desses "list" que tu colocou ser uma (li) por exemplo list-item, como foi feito está dificil entender que tudo faz parte da mesma lista -->
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarLastSeen/photo01.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarLastSeen/photo01.png" alt="" />
             <div>
               <p>To these in the morning I sent the lead who was to...</p>
               <p>19 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarLastSeen/photo02.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarLastSeen/photo02.png" alt="" />
             <div>
               <p>
                 When the last 'natural' had been declared, and the profit...
@@ -75,22 +97,31 @@
               <p>13 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarLastSeen/photo03.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarLastSeen/photo03.png" alt="" />
             <div>
               <p>Sam's attention that, when this person dismounted…</p>
               <p>21 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarLastSeen/photo04.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarLastSeen/photo04.png" alt="" />
             <div>
               <p>To these in the morning I sent the lead who was ...</p>
               <p>10 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarLastSeen/photo05.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarLastSeen/photo05.png" alt="" />
             <div>
               <p>
                 The tattered remains of a checked curtain were drawn round...
@@ -99,20 +130,31 @@
             </div>
           </div>
         </section>
+        <!-- Isso poderia ser um ID, pois é uma seção ÚNICA.  -->
         <section class="newsletter">
+          <!-- Isso é um titulo, não um artigo. -->
           <article>Newsletter</article>
           <div class="content-form">
             <form action="">
-              <legend>Get our news earlier, let’s get in touch.</legend>
+              <legend>Get our news earlier, let`s get in touch.</legend>
+              <!-- ID email é mt genérico, id tem que ser unico, algo como email-newsletter -->
               <input type="email" id="email" placeholder="Your email" />
+              <!-- Faltou um cursor pointer e um hover nesse botão -->
+              <!-- ID button é mt genérico, id tem que ser unico, algo como btn-newsletter -->
               <input id="button" type="submit" value="Send" />
             </form>
           </div>
         </section>
+        <!-- Isso poderia ser um ID, pois é uma seção ÚNICA.  -->
         <section class="most-popular">
+          <!-- Isso está errado, não se repete ID, ela é única e tu está usando duas vezes, nesse caso se usa classe. -->
           <p id="label">Most Popular</p>
+          <!-- Aqui, da para ser assim, mas está estranho, ideal é ter uma list (ul) chamada list por exemplo e dentro dela cada um desses "list" que tu colocou ser uma (li) por exemplo list-item, como foi feito está dificil entender que tudo faz parte da mesma lista -->
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarMostPopular/Photo01.png " alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarMostPopular/Photo01.png " alt="" />
             <div>
               <p>
                 However, I travelled along the shore of the sea towards the…
@@ -120,34 +162,47 @@
               <p>14 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarMostPopular/Photo02.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarMostPopular/Photo02.png" alt="" />
             <div>
               <p>Sam's attention that, when this person dismounted…</p>
               <p>21 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarMostPopular/Photo03.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarMostPopular/Photo03.png" alt="" />
             <div>
               <p>As we passed, I remarked a beautiful church-spire rising…</p>
               <p>18 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarMostPopular/Photo04.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarMostPopular/Photo04.png" alt="" />
             <div>
               <p>Lady Crawley, and mother of the young ladies. she was…</p>
               <p>18 December</p>
             </div>
           </div>
+          <!-- Cada um desses items deveria ter um link que iria para outra noticia, ou seja, li (list-item) e dentro um link que engloba tudo. -->
           <div class="list">
-            <img src="/assets/img/sidebarMostPopular/Photo05.png" alt="" />
+            <!-- Essa img deveria estar dentro de uma div, senão quando tu quiser arredondar as bordas no css isso não vai funcionar. -->
+            <!-- Aqui não se coloca / pra começar estava /assets e não somente assets, senão tem computadores como o meu que não abrem o caminho correto -->
+            <img src="assets/img/sidebarMostPopular/Photo05.png" alt="" />
             <div>
-              <p>This I have produced as a scantling of Jack’s great...</p>
+              <p>This I have produced as a scantling of Jack`s great...</p>
               <p>15 December</p>
             </div>
           </div>
+          <!-- Faltou um cursor pointer e um hover nesse botão -->
           <button>Load More</button>
         </section>
       </sidebar>
