--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <h3>Samuel Audley</h3>
             <p>Saving the world. Shaping the world.</p>
           </div>
+          <div>
+            <a href="">twitter</a>
+            <a href="">facebook</a>
+            <a href="">dribble</a>
+            <a href="">instagram</a>
+          </div>
         </div>
       </div>
     </section>
