Iniciando codificação do main da página.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/0b6a0e4634.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -24,20 +28,56 @@
             <img src="assets/img/png/index/photo-user.png" alt="" />
           </div>
           <div class="content-user-description">
-            <h3>Samuel Audley</h3>
-            <p>Saving the world. Shaping the world.</p>
-          </div>
-          <div>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">dribble</a>
-            <a href="">instagram</a>
+            <div class="text">
+              <h3>Samuel Audley</h3>
+              <p>Saving the world. Shaping the world.</p>
+            </div>
+            <div class="icons">
+              <a href="">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-square-facebook"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-dribbble"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <main id="main">
-      <h2>Branding</h2>
+      <article>
+        <div>
+          <h2>Branding</h2>
+          <p>
+            This sounded nonsense to Alice, so she said nothing, but set off at
+            once toward the Red Queen. To her surprise, she lost sight of her in
+            a moment, and found herself walking in at the front-door again.
+          </p>
+          <p>
+            For some minutes Alice stood without speaking, looking out in all
+            directions over the country - and a most curious country it was.
+            There were a number of tiny little brooks running straight across it
+            from side to side, and the ground between was divided up into
+            squares by a number of little.
+          </p>
+        </div>
+        <div>
+          <h4>Perfect for Your</h4>
+          <p>
+            She gave my mother such a turn, that I have always been convinced I
+            am indebted to Miss Betsey for having been born on a Friday. The
+            word was appropriate to the moment.
+          </p>
+          <img src="assets/img/png/index/Perfect-for-you.png" alt="" />
+          <p class="legend">There have not been any since</p>
+        </div>
+      </article>
     </main>
   </body>
 </html>
