Reorganizando estrutura do código e finalizando CSS.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <section class="introduction">
-      <div class="content-introduction">
+    <section class="header">
+      <div class="header-content">
         <h1>How To Protect Computer. Very Useful Tips</h1>
         <h3>Splashproof Design</h3>
         <div class="content-user">
@@ -52,13 +52,15 @@
     </section>
     <main id="main">
       <article>
-        <div>
+        <div class="introduction">
           <h2>Branding</h2>
           <p>
             This sounded nonsense to Alice, so she said nothing, but set off at
             once toward the Red Queen. To her surprise, she lost sight of her in
             a moment, and found herself walking in at the front-door again.
           </p>
+          <br />
+          <br />
           <p>
             For some minutes Alice stood without speaking, looking out in all
             directions over the country - and a most curious country it was.
@@ -66,16 +68,59 @@
             from side to side, and the ground between was divided up into
             squares by a number of little.
           </p>
+          <br />
         </div>
-        <div>
+        <div class="content">
           <h4>Perfect for Your</h4>
           <p>
             She gave my mother such a turn, that I have always been convinced I
             am indebted to Miss Betsey for having been born on a Friday. The
             word was appropriate to the moment.
           </p>
-          <img src="assets/img/png/index/Perfect-for-you.png" alt="" />
-          <p class="legend">There have not been any since</p>
+          <br />
+          <br />
+          <div class="content-img">
+            <img src="assets/img/png/index/Perfect-for-you.png" alt="" />
+          </div>
+          <p id="legend">There have not been any since</p>
+          <br />
+          <div class="content-final">
+            <h4>The Fall Report</h4>
+            <p>
+              This sounded nonsense to Alice, so she said nothing, but set off
+              at once toward the Red Queen. To her surprise, she lost sight of
+              her in a moment, and found herself walking in at the front-door
+              again.
+            </p>
+            <br />
+            <br />
+            <div class="list-content-final">
+              <ul>
+                <li>
+                  <i class="fa-sharp fa-regular fa-circle-dot"></i>
+                  <p>
+                    Thus much I thought proper to tell you in relation to
+                    yourself, and to the trust I reposed in you.
+                  </p>
+                </li>
+                <br />
+                <li>
+                  <i class="fa-sharp fa-regular fa-circle-dot"></i>
+                  <p>
+                    So saying he unbuckled his baldric with the bugle, took a
+                    feather from his cap, and gave them to Wamba.
+                  </p>
+                </li>
+              </ul>
+              <br />
+              <br />
+              <p>
+                She gave my mother such a turn, that I have always been
+                convinced I am indebted to Miss Betsey for having been born on a
+                Friday. The word was appropriate to the moment.
+              </p>
+            </div>
+          </div>
         </div>
       </article>
     </main>
